k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: library-system
  labels:
    app: library-service
